# dnn

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  model.hpp  train.hpp  utils.hpp
bench/: benchmark.cpp
cmake/modules/: CPM.cmake  FindClangTidy.cmake
exec/: main.cpp
include/: model.hpp  train.hpp  utils.hpp
src/: model.cpp  train.cpp  utils.cpp
test/: test.cpp
